[gd_scene load_steps=5 format=2]

[ext_resource path="res://items/pickupSpawn.gd" type="Script" id=1]
[ext_resource path="res://items/Shield.tscn" type="PackedScene" id=2]
[ext_resource path="res://items/Health.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="pickupSpawn" type="Node2D" groups=[
"PickupsDeployed",
]]
script = ExtResource( 1 )

[node name="PickupRadius" type="Area2D" parent="."]

[node name="Rectangle" type="CollisionShape2D" parent="PickupRadius"]
scale = Vector2( 108.062, 64.3016 )
shape = SubResource( 1 )

[node name="Shield" parent="." groups=[
"Pickups",
] instance=ExtResource( 2 )]
position = Vector2( 0, 160.55 )

[node name="Health" parent="." groups=[
"Pickups",
] instance=ExtResource( 3 )]
position = Vector2( 0, -192.25 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
